Modify hobbies and dislikes in index.html
Updated hobbies and dislikes sections in profile.

--- a/index.html
+++ b/index.html
@@ -304,16 +304,16 @@
                         <h3>Hobbies</h3>
                         <ul data-testid="test-user-hobbies">
                             <li>Coding</li>
-                            <li>Hiking</li>
+                            <li>Writing</li>
                             <li>Photography</li>
                         </ul>
                     </section>
                     <section>
                         <h3>Dislikes</h3>
                         <ul data-testid="test-user-dislikes">
-                            <li>Slow internet</li>
-                            <li>Unsemantic HTML</li>
-                            <li>Bugs on a Friday</li>
+                            <li>Coding</li>
+                            <li>Ignorance</li>
+                            <li>Procrastination</li>
                         </ul>
                     </section>
                 </div>
@@ -337,6 +337,7 @@
 
 </body>
 </html>
+
 
 
 
