Revise content and structure in about.html
Updated the 'About Me' section to reflect changes in content and structure.

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
         <div class="about-content">
             <section data-testid="test-about-bio">
-                <h2>Who I Am (My Bio)</h2>
+                <h2>Short About</h2>
                 <p>Hello! I'm Ogochukwu Oparaocha, a frontend developer diving deep into the world of accessible and resilient web development. My current focus is mastering frameworks like React and ensuring every line of code I write adheres to the highest standards of semantic HTML and performance.</p>
             </section>
 
@@ -49,11 +49,12 @@
 
             <section data-testid="test-about-extra">
                 <h2>Extra Thoughts</h2>
-                <p>The pace of the HNG internship is challenging but rewarding. It's truly a test of time management and rapid learning. I appreciate the emphasis on accessibility—it's shifting my entire approach to coding for the better.</p>
+                <p>The pace of the HNG internship is challenging but rewarding. It's truly a test of time management and rapid learning. I appreciate the emphasis on accessibility, it's shifting my entire approach to coding for the better.</p>
             </section>
         </div>
     </main>
 
     <script src="script.js"></script>
 </body>
+
 </html>
